--- a/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
@@ -354,6 +354,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btnMuaNgay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
