--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -80,23 +80,54 @@
             android:layout_margin="10dp"
             android:orientation="horizontal">
 
-            <ImageButton
-                android:id="@+id/imgThanhToanTrucTiep"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/colorWhite"
-                android:scaleType="centerInside"
-                android:src="@drawable/ship" />
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/imgChuyenKhoan"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                <ImageButton
+                    android:id="@+id/imgThanhToanTrucTiep"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:background="@color/colorWhite"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ship" />
+
+                <TextView
+                    android:id="@+id/txtNhanTienKhiGiaoHang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Nhân tiền khi giao hàng"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/colorWhite"
-                android:scaleType="centerInside"
-                android:src="@drawable/visa" />
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageButton
+                    android:id="@+id/imgChuyenKhoan"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:background="@color/colorWhite"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/visa" />
+
+                <TextView
+                    android:id="@+id/txtChuyenKhoan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Chuyển khoản"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <CheckBox
