--- a/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
@@ -45,14 +45,32 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/txtGiaTien"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="100000 VND"
-                    android:textColor="@color/colorRed"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:id="@+id/txtGiaTien"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="100000 VND"
+                        android:textColor="@color/colorRed"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtGiamGia"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="100000 VND"
+                        android:textColor="@color/colorGray"
+                        android:textSize="14sp"
+                        android:visibility="gone" />
+                </LinearLayout>
+
 
                 <RatingBar
                     android:id="@+id/rbDanhGia"
