--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,5 +37,11 @@
 
     </style>
 
+    <style name="SearchView" parent="AppTheme">
+        <item name="android:textColorHint">@color/colorGray</item>
+        <item name="android:editTextColor">@color/colorBlack</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 
 </resources>
